Replace Transaction by PipelineBackendTransaction